tests/rt/pos/ifc/declassifyType.trp
let val x = if true raisedTo `<alice; #root-integrity>`
            then 42
            else 21
    val x' = declassifyType (x, authority, `{}`)
    val _ = blockdown authority
in (x, x')
end

